Fix minor code inconsistencies and clean up
- Adjust indentation in `Result.java` for improved readability.
- Remove unused `Stream` import in `StreamGatherersTest`.
- Replace redundant `get(0)` with `getFirst()` for better clarity and intent.